# mini-audit-Start-to-Scale

./: .clippy.toml  .gitignore  .vercelignore  API_SETUP.md  AUTHORS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SETUP_VERCEL.md  Trunk.toml  build.sh  index.html  install-hooks.sh  package.json  rustfmt.toml  start.sh  style.css  tsconfig.json  vercel.json
.github/workflows/: README.md
api/: contact.ts
questions/: business-model.yaml  financement.yaml  go-to-market.yaml  organisation.yaml  produit.yaml
src/: app.rs  lib.rs  models.rs  survey.rs
src/components/: contact.rs  mod.rs  questions.rs  results.rs  welcome.rs
