[package]
name = "hub-survey"
version = "0.1.1"
edition = "2021"
authors = ["kdelfour"]
description = "Mini audit Start to Scale pour le Hub612"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.7", features = ["v4", "serde", "js"] }
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "HtmlElement",
    "Element",
    "Event",
    "EventTarget",
    "SubmitEvent",
    "InputEvent",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "Window",
] }
console_error_panic_hook = "0.1"

